# ChangeLog for net-mail/getmail
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/getmail/ChangeLog,v 1.114 2006/02/07 23:17:21 ticho Exp $

*getmail-4.5.2 (07 Feb 2006)

  07 Feb 2006; Andrej Kacian <ticho@gentoo.org> -getmail-4.5.1.ebuild,
  +getmail-4.5.2.ebuild:
  Version bump. Removed 4.5.1

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> getmail-4.4.4.ebuild:
  stable on amd64

  07 Feb 2006; Aron Griffis <agriffis@gentoo.org> getmail-4.4.4.ebuild:
  Mark 4.4.4 stable on alpha

*getmail-4.5.1 (03 Feb 2006)

  03 Feb 2006; Andrej Kacian <ticho@gentoo.org> -getmail-4.5.0.ebuild,
  +getmail-4.5.1.ebuild:
  Another version bump, 4.5.1 fixes a bug in 4.5.0, which I removed.

*getmail-4.5.0 (03 Feb 2006)

  03 Feb 2006; Andrej Kacian <ticho@gentoo.org> +getmail-4.5.0.ebuild:
  Version bump.

  03 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> getmail-4.4.4.ebuild:
  Stable on sparc

  02 Feb 2006; Andrej Kacian <ticho@gentoo.org> getmail-4.4.4.ebuild:
  Stable on x86.

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> getmail-4.4.3.ebuild:
  Stable on ppc.

  05 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> getmail-4.4.3.ebuild:
  Stable on sparc

  03 Jan 2006; Fernando J. Pereda <ferdy@gentoo.org> getmail-4.4.3.ebuild:
  Stable on alpha

*getmail-4.4.4 (03 Jan 2006)

  03 Jan 2006; Andrej Kacian <ticho@gentoo.org> getmail-4.4.3.ebuild,
  +getmail-4.4.4.ebuild:
  Version bump. 4.4.3 stable on x86.

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> getmail-4.4.2.ebuild:
  Stable on ppc.

  20 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org> getmail-4.4.2.ebuild:
  Stable on sparc

  19 Dec 2005; Andrej Kacian <ticho@gentoo.org> getmail-4.4.2.ebuild:
  Stable on x86.

  12 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org> getmail-4.4.1.ebuild:
  Stable on sparc

  12 Dec 2005; Andrej Kacian <ticho@gentoo.org> getmail-4.3.14.ebuild,
  getmail-4.4.1.ebuild:
  4.3.14 and 4.4.1 stable on x86.
