@@ -1,9 +1,9 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 64d867faee4bbdd3841c7ca8bdb1dc19 ChangeLog 14952
-RMD160 0949e8836030b067f36e3f9c67432a55965d8ad5 ChangeLog 14952
-SHA256 4354f4792bee606d4ad42a2aba30064473957b111a12e5670a12a7c0c33e0bed ChangeLog 14952
+MD5 83287e4a97d587a2409052bef6698f77 ChangeLog 15070
+RMD160 4d865da5dddd01166f29ef752e2938b2a6ca59dd ChangeLog 15070
+SHA256 8b71a5475f017b554a1c1553b6e6d65690fc6c814bb8b64c782bfb5205252d71 ChangeLog 15070
 MD5 86240c0d474cc541504969f938a0e7f2 files/digest-getmail-4.3.11 66
 RMD160 0dea071ee29ed58259c4a4e1e16239074968a541 files/digest-getmail-4.3.11 66
 SHA256 c81201a3399bfaf1b92457693425f2244fd651911075a5ab25d7414cf0913096 files/digest-getmail-4.3.11 66
@@ -25,6 +25,9 @@ SHA256 97f05622ab31227afd3d5f547fd79511e16320b147065598eedc59b259776145 files/di
 MD5 ee5dbdfd95564a3ef4d039feef4987cd files/digest-getmail-4.5.2 241
 RMD160 d245e6e04b196a0c5f20b14b7e6a4f32728c4ff4 files/digest-getmail-4.5.2 241
 SHA256 b425347f0afe3370a4b10dd85212fa1b418adc1aa624ac2533c4b01e0fec5dc0 files/digest-getmail-4.5.2 241
+MD5 ed62c5c4f73729cde245dde4d25f3bab files/digest-getmail-4.5.3 241
+RMD160 1a780c7573f1d3a436c26e3cbd741f6877dffbb4 files/digest-getmail-4.5.3 241
+SHA256 09f1a5c692230819bc43a7ce628db5ab61a6dd0f1fe8ebb207673fd782cbddaa files/digest-getmail-4.5.3 241
 MD5 1e51a7448e62ee3fd6ad7562b290729b getmail-4.3.11.ebuild 1574
 RMD160 3b3dcb14074bba2efba4901a620943694a432e68 getmail-4.3.11.ebuild 1574
 SHA256 231a2e7c274f1750c3a150ca3ce7770d46b5dda710b7c6adc8f894c56d88f87b getmail-4.3.11.ebuild 1574
@@ -46,13 +49,16 @@ SHA256 b17b846270f374bd47d6323336fb1f7d5706999f7e0f44ebdffb8e4f719ea477 getmail-
 MD5 9d538824220063762ab36337dc672eae getmail-4.5.2.ebuild 1575
 RMD160 7d1e3da54e2a6727d34e6c9deee1967a898ab122 getmail-4.5.2.ebuild 1575
 SHA256 c5ab33261c2adeec02263454a3e3d32b8f9ba4f50f4aae2de25545bb8f261280 getmail-4.5.2.ebuild 1575
+MD5 6d3dc6a619cdd8860a999864136651a8 getmail-4.5.3.ebuild 1575
+RMD160 d4a34a09209f22c39dd3156a80eaa246acfe5813 getmail-4.5.3.ebuild 1575
+SHA256 8c4b9d836df7b4a32fad648f0289e23aa67ca6fa1106cb4501c6eed999a64b3b getmail-4.5.3.ebuild 1575
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 metadata.xml 161
 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32 metadata.xml 161
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iD8DBQFD6SqPQlM6RnzZP+IRAuqnAKC3TJXOOKrjykJxKLBm1xkQis9euQCeIxnI
-XbLSO30ZYUAIuaKvSHptLCg=
-=YldO
+iD8DBQFD61Q0QlM6RnzZP+IRAj1AAKCegZ3KqyMsHjDspKtASWVlR92IwQCeIRzM
+yhnDT5ogFj0nMSUOJXOCRT0=
+=Jswk
 -----END PGP SIGNATURE-----
