@@ -1,0 +1,3 @@
+MD5 0a157e0804b4715f3d8d82085f683c4c getmail-4.5.3.tar.gz 137589
+RMD160 d37c4218e7c22faa874b803c9854c8446b008950 getmail-4.5.3.tar.gz 137589
+SHA256 57b0b3a4084a27f4000d2f7949c596ed52c60a9225fcc4d6201a12eb8f45d4c9 getmail-4.5.3.tar.gz 137589
