@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/getmail
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/getmail/ChangeLog,v 1.114 2006/02/07 23:17:21 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/getmail/ChangeLog,v 1.115 2006/02/09 14:38:50 ticho Exp $
+
+*getmail-4.5.3 (09 Feb 2006)
+
+  09 Feb 2006; Andrej Kacian <ticho@gentoo.org> +getmail-4.5.3.ebuild:
+  Version bump.
 
 *getmail-4.5.2 (07 Feb 2006)
 
